# wishlist

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .onedev-buildspec.yml  .pre-commit-config.yaml  .releaserc  Dockerfile  LICENSE  README.md  docker-compose.yml  models.py  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties  start.sh  tailwind.config.js  urls.py  views.py
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_wish_link.py  0003_group.py  0004_wish_quantity_alter_wish_owner_and_more.py  0005_reservation_alter_wish_reserved_by_reservation_wish.py  0006_alter_wish_link_alter_wish_quantity_and_more.py
app/templatetags/: customTags.py
core/: asgi.py  settings.py  urls.py
docs/: model.puml
migrations/: 0001_initial.py  0002_wish_link.py  0004_wish_quantity_alter_wish_owner_and_more.py  0006_alter_wish_link_alter_wish_quantity_and_more.py  0007_auto_20230425_2208.py  0008_wish_favorite.py  0009_alter_wish_options_wish_depends_on.py
static/css/: daisyui.css
templates/: base-clear.html  base-internal.html  base-public.html  base.html
templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key_done.html  reauthenticate.html  signup.html  verification_sent.html
templates/app/: create-wish.html  (+3 more)
templatetags/: email_hash.py
wishlist/: .env.example  admin.py  mixins.py  models.py  settings.py  urls.py  views.py
(+46 files in other folders)
