[project]
name = "wishlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.11",
    "django-allauth[socialaccount]==65.14.3",
    "gunicorn==23.0.0",
    "requests==2.32.5",
    "sentry-sdk[django]==2.53.0",
    "whitenoise==6.11.0",
]
