[project]
name = "wishlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.3",
    "django-allauth[socialaccount]==65.15.0",
    "gunicorn==25.1.0",
    "requests==2.33.1",
    "sentry-sdk[django]==2.55.0",
    "whitenoise==6.12.0",
]
