[project]
name = "wishlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.4",
    "django-allauth[socialaccount]==65.16.1",
    "gunicorn==25.3.0",
    "requests==2.33.1",
    "sentry-sdk[django]==2.58.0",
    "whitenoise==6.12.0",
]
